[gd_scene load_steps=4 format=3 uid="uid://baimmraemq43d"]

[ext_resource type="Script" uid="uid://clekrjlu4c3og" path="res://scripts/clue_ui.gd" id="1_invuc"]
[ext_resource type="Texture2D" uid="uid://rf7603w6lh4k" path="res://asset/frame_spech_green.png" id="2_c0lnr"]
[ext_resource type="Texture2D" uid="uid://bvvy8kk5tvx3c" path="res://asset/btn_0000_close_idle.png" id="3_3gt1i"]

[node name="PopUIRect" type="NinePatchRect"]
offset_right = 600.0
offset_bottom = 400.0
texture = ExtResource("2_c0lnr")
patch_margin_left = 50
patch_margin_top = 50
patch_margin_right = 50
patch_margin_bottom = 50
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ColorRect" type="ColorRect" parent="NinePatchRect"]
visible = false
layout_mode = 2
color = Color(0.202627, 0.0589161, 0.149517, 1)
metadata/_edit_use_anchors_ = true

[node name="RichText" type="RichTextLabel" parent="NinePatchRect"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "唉，[u][url=word://person_1]摩根[/url][/u]先生，没想到还是走到了这一步。还有[u][url=word://person_2]艾琳[/url][/u]小姐说她看到他手上拿着[u][url=word://item_1]酒杯[/url][/u]，而且有人在[u][url=word://place_1]图书馆[/url][/u]发现了[u][url=word://item_2]毒药瓶[/url][/u]，最后他还被看见出现在[u][url=word://place_2]厨房[/url][/u]。"

[node name="CloseBtn" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 30.0
grow_horizontal = 0
texture_normal = ExtResource("3_3gt1i")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="ClueUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_invuc")
